--- a/client/src/layouts/header.css
+++ b/client/src/layouts/header.css
@@ -20,7 +20,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 20px;
+    cursor: pointer;
     height: 50px;
 }
 
@@ -28,38 +28,38 @@
     display: flex;
     flex: 1;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
-    margin-left: 20px;
+    /* margin-left: 6vw; */
 }
 
 .list-item{
     display: flex;
-    flex: 1;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-left: 20px;
+    /* margin-left: 20px; */
+    padding-right: 1em;
     font-weight: 700;
+    cursor: pointer;
 }
 
 .arrow{
     margin-left: 8px;
     height: 15px;
+    cursor: pointer;
 }
 
 /* button with orange background and 50% border radious */
 
 .button{
-    flex: 2;
+    flex: .35;
     height: 7vh;
     background-color: rgb(255, 111, 0);
-    border-radius: 30%;
+    border-radius: 50px;
+    width: 10rem;
     display: flex;
+    cursor: pointer;
     justify-content: center;
     align-items: center;
-    font-weight: 200;
+    font-weight: 500;
     color: #fff;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-right: 30px;
 }
